refactor. fix some bug manual testing - all is work add create shorten without given alias