@@ -3,18 +3,27 @@ package edu.kpi.testcourse.rest;
 import edu.kpi.testcourse.Main;
 import edu.kpi.testcourse.bigtable.Alias;
 import edu.kpi.testcourse.bigtable.AliasDao;
+import edu.kpi.testcourse.utils.ShortenGenerator;
+import io.micronaut.context.annotation.Parameter;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.MediaType;
 import io.micronaut.http.annotation.Controller;
 import io.micronaut.http.annotation.Delete;
 import io.micronaut.http.annotation.Get;
+import io.micronaut.http.annotation.PathVariable;
 import io.micronaut.http.annotation.Post;
+import io.micronaut.http.annotation.QueryValue;
 import io.micronaut.security.annotation.Secured;
 import io.micronaut.security.rules.SecurityRule;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.security.Principal;
+import javax.annotation.Nullable;
 import javax.inject.Inject;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * REST API controller that provides logic for Micronaut framework.
@@ -22,6 +31,8 @@ import javax.inject.Inject;
 @Secured(SecurityRule.IS_AUTHENTICATED)
 @Controller
 public class ApiController {
+
+  private static final Logger logger = LoggerFactory.getLogger(ApiController.class);
 
   record ExampleClass(String first, String second) {}
 
@@ -42,11 +53,14 @@ public class ApiController {
    * @return OK/error.
    */
   @Post(value = "/urls/shorten", consumes = MediaType.APPLICATION_JSON)
-  public HttpResponse<Object> shortenUrl(String url, String alias, Principal principal) {
+  public HttpResponse<Object> shortenUrl(String url, @Nullable String alias, Principal principal) {
+    if (alias == null) {
+      alias = ShortenGenerator.generate();
+    }
     if (aliasDao.get(alias) == null) {
       Alias aliasObj = new Alias(alias, url, principal.getName());
       aliasDao.add(alias, aliasObj);
-      return HttpResponse.ok("A new alias for url was created successfully");
+      return HttpResponse.ok(Main.getGson().toJson(aliasObj));
     } else {
       return HttpResponse.badRequest("Alias is not unique!");
     }
@@ -68,7 +82,7 @@ public class ApiController {
    * @param alias string, required - alias, that needs to be removed.
    * @return OK/error.
    */
-  @Delete(value = "/urls/<alias>")
+  @Delete(value = "/urls/{alias}")
   public HttpResponse<Object> deleteAlias(String alias, Principal principal) {
     Alias aliasObj = aliasDao.get(alias);
     if (aliasObj != null && aliasObj.getUsername().equals(principal.getName())) {
@@ -84,14 +98,16 @@ public class ApiController {
    * @param alias string, required - alias for the full link.
    * @return Redirect/Error.
    */
-  @Get(value = "/r/<alias>", produces = MediaType.APPLICATION_JSON)
+  @Secured(SecurityRule.IS_ANONYMOUS)
+  @Get(value = "/r/{alias}")
   public HttpResponse<Object> redirectToUrl(String alias) {
     Alias aliasObj = aliasDao.get(alias);
+    logger.info(alias);
     if (aliasObj != null) {
       try {
-        URI uri = new URI(aliasObj.getUrl());
-        return HttpResponse.redirect(uri);
-      } catch (URISyntaxException e) {
+        URL uri = new URL(aliasObj.getUrl());
+        return HttpResponse.redirect(uri.toURI());
+      } catch (URISyntaxException | MalformedURLException e) {
         e.printStackTrace();
       }
     }
